@@ -5,6 +5,7 @@
 * CardStreamModern: Added better checks on inputs from the gateway [ExxKA]
 * Stripe: Send :ip to the gateway instead of :browser_ip [f3ndot]
 * Wirecard Page: new offsite gateway [mbretter]
+* Mercury: Add support for requesting a token [kcdragon]
 
 == Version 1.41.0 (October 24th, 2013)
 
